cli-next/tests/snapshots/dev_config__wukong_dev_config_diff_when_secret_file_not_found.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---
'[36mconfig/c.secret.exs[39m' not found.

