cli-next/tests/snapshots/dev_config__wukong_dev_config_lint_on_main_config_success.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---
  [31mx[0m no_env_in_main_config
   ,-[[36;1;4m[TEMP_DIR]/config/config.exs[0m:3:1]
 [2m3[0m | 
 [2m4[0m | System.get_env("API_KEY")
   : [35;1m^^^^^^^^^^^^|^^^^^^^^^^^^[0m
   :             [35;1m`-- [35;1mMain config must not contains any environment variables[0m[0m
 [2m5[0m | System.fetch_env("API_SECRET")
   `----
[36m  help: [0mMove this config value into either `runtime.exs` if you’re reading them during runtime, or providing a static value.

  [31mx[0m no_env_in_main_config
   ,-[[36;1;4m[TEMP_DIR]/config/config.exs[0m:4:1]
 [2m4[0m | System.get_env("API_KEY")
 [2m5[0m | System.fetch_env("API_SECRET")
   : [35;1m^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^[0m
   :                [35;1m`-- [35;1mMain config must not contains any environment variables[0m[0m
 [2m6[0m | System.fetch_env!("API_TOKEN")
   `----
[36m  help: [0mMove this config value into either `runtime.exs` if you’re reading them during runtime, or providing a static value.

  [31mx[0m no_env_in_main_config
   ,-[[36;1;4m[TEMP_DIR]/config/config.exs[0m:5:1]
 [2m5[0m | System.fetch_env("API_SECRET")
 [2m6[0m | System.fetch_env!("API_TOKEN")
   : [35;1m^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^[0m
   :                [35;1m`-- [35;1mMain config must not contains any environment variables[0m[0m
 [2m7[0m | 
   `----
[36m  help: [0mMove this config value into either `runtime.exs` if you’re reading them during runtime, or providing a static value.

  [31mx[0m no_env_in_main_config
    ,-[[36;1;4m[TEMP_DIR]/config/config.exs[0m:25:1]
 [2m25[0m | 
 [2m26[0m | test_domain = System.get_env("TEST_DOMAIN", "mv.test.com")
    : [35;1m              ^^^^^^^^^^^^^^^^^^^^^^|^^^^^^^^^^^^^^^^^^^^^[0m
    :                                     [35;1m`-- [35;1mMain config must not contains any environment variables[0m[0m
 [2m27[0m | 
    `----
[36m  help: [0mMove this config value into either `runtime.exs` if you’re reading them during runtime, or providing a static value.

Total time taken: [DURATION] ([DURATION] to load, [DURATION] running 3 checks)
Total files: 1

